fix(dataset list) 'removed empty divs, replaced by bootstrap offset and margin' 'also improved table display on mobile and tablet'

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -2414,8 +2414,10 @@ h2.odfri_title_red {
     font-size: 150%;
     margin-left:10px;
     margin-top:-3px;
+}
 
 .dataset_metrics {
+    margin-bottom: 25px;
     padding-top: 25px;
     font-family: 'Bariol Bold', "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 25px;
@@ -2435,16 +2437,16 @@ h2.odfri_title_red {
 .dataset_metrics {
     display: flex;
 }
+
 .dataset_metrics > div {
     flex-grow: 1;
 }
+
 .dataset_metrics > div:first-child {
     flex-basis: 45%;
     flex-grow: 2;
 }
-.dataset_metrics > div:not(:first-child) {
 
-}
 .dataset_metrics > div:not(:last-child) {
     padding-right: 20px;
 }
@@ -2453,6 +2455,7 @@ h2.odfri_title_red {
     .dataset_metrics {
         flex-wrap: wrap;
     }
+
     .dataset_metrics > div {
         padding-right: 0;
         margin-bottom: 10px;
